# agentic-search-observability

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: agent.py  config.py  graph.py  guardrails.py  main.py
app/api/: main.py
app/core/: config.py  logging.py  observability.py  schemas.py
app/pipelines/: agent_planner.py  graph.py  query_planner.py
app/services/: llm.py  search.py
