[project]
name = "agentic-search"
version = "0.1.0"
description = "Agentic web search API built with FastAPI, LangGraph, and LangChain."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "langchain>=1.0.0",
  "langchain-openai>=0.2.0",
  "langchain-community>=0.3.0",
  "langgraph>=0.2.0",
  "langfuse>=2.0.0",
  "tavily-python>=0.5.0",
]

[tool.uv]
package = false
